[package]
name = "todorust"
version = "0.1.0"
authors = ["Masahiro Tanaka <plaza.tumbling@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"